automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -4,4 +4,4 @@ Classroom Info
 </p>
 
 We now want to call out the oldest student in the class:
-<%= render partial: "students/student" %>
+<%= render partial: "students/student", locals: {student: @student} %>
