--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,5 @@
 <p>
   <%= form_tag (students_path :method => "get") do %>
+  <%= text_field_tag :query, params[:query], placeholder: "Find Student" %>
   <% end %>
 </p>
