--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,6 @@
 <p>
   <%= form_tag (students_path :method => "get") do %>
   <%= text_field_tag :query, params[:query], placeholder: "Find Student" %>
+  <%= submit_tag "Search", name => nil %>
   <% end %>
 </p>
