automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,6 +5,6 @@
   <% end %>
 </p>
 
-<% @students.each do |student| %>
+<% Student.all.each do |student| %>
   <%= render partial: "student", locals: {student: student} %>
 <% end %>
