--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Student Info</h1>
 
 <% Student.all.each do |student| %>
-<%= render 'student' %>
+<%= render partial: "student", locals: {student: student} %>
 <% end %>
