automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,5 +6,5 @@
 </p>
 
 <% Student.all.each do |student| %>
-  <%= render partial: "student", locals: {student: @student} %>
+  <%= render partial: "student", locals: {student: student} %>
 <% end %>
